# Pill-Identifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/api/: .gitkeep  endpoints.py
app/core/: .gitkeep  config.py
app/models/: .gitkeep
app/schemas/: pill.py
app/services/: .gitkeep  detection.py  recognition.py  search.py
app/utils/: .gitkeep
